--- a/templates/history.html
+++ b/templates/history.html
@@ -65,7 +65,12 @@
 
 <header>
     <a href="/" class="logo-text">Winter Postcards</a>
+
+    <a href="mailto:shivamt.2528@itmuniversity.org" class="contact-icon">
+        ❄️
+    </a>
 </header>
+
 
 <div class="history-container">
     <h1 class="history-title">Your Sent Postcards</h1>
