--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Winter Postcards ✨
-</title>
+<title>Winter Postcards ✨</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
@@ -12,18 +11,15 @@
 <header>
     <a href="/" class="logo-text">Winter Postcards</a>
 
-    <a href="mail to- :shivamt.2528@itmuniversity.org" class="contact-icon">
+    <a href="mailto:shivamt.2528@itmuniversity.org" class="contact-icon">
         ❄️
-
-
-
     </a>
 </header>
+
 <main class="center">
   <h1>A Village Dreaming in Snow</h1>
   <p class="sub">Where every message becomes a small lantern in the dark.</p>
-  <a href="/globes" class="start-btn">Choose a Snow Globe ✨
-</a>
+  <a href="/globes" class="start-btn">Choose a Snow Globe ✨</a>
 </main>
 
 
