--- a/templates/preview.html
+++ b/templates/preview.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Preview Your Whisper ✨
-</title>
+<title>Preview Your Whisper ✨</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
@@ -13,7 +12,6 @@
 
     <a href="mailto:YOUR_EMAIL_HERE" class="contact-icon">
         ❄️
-
     </a>
 </header>
 
@@ -36,8 +34,7 @@
   <input type="hidden" name="message" value="{{ message }}">
   <input type="hidden" name="to_name" value="{{ to_name }}">
   <input type="hidden" name="from_name" value="{{ from_name }}">
-  <button class="btn" type="submit">Send Into the Night 💫
-</button>
+  <button class="btn" type="submit">Send Into the Night 💫</button>
 </form>
 
 </main>
