--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>You’ve Received a Winter Bloom ❄️
-</title>
+<title>You’ve Received a Winter Bloom ❄️</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 <style>
@@ -52,21 +51,18 @@
 <header>
     <a href="/" class="logo-text">Winter Postcards</a>
 
-    <a href="mailto:YOUR_EMAIL_HERE" class="contact-icon">
+    <a href="mailto:shivamt.2528@itmuniversity.org" class="contact-icon">
         ❄️
-
     </a>
 </header>
 
 
 <main class="reveal-container">
-    <h1 class="reveal-heading">You’ve received a Winter Bloom ❄️
-</h1>
+    <h1 class="reveal-heading">You’ve received a Winter Bloom ❄️</h1>
     <p class="reveal-sub">A whisper wrapped gently in snow, waiting to be opened.</p>
 
    <a href="{{ url_for('bloom', postcard_id=postcard_id) }}" class="view-btn">
    View Your Bloom ✨
-
 </a>
 
 </main>
