--- a/templates/sent.html
+++ b/templates/sent.html
@@ -98,7 +98,7 @@
 <header>
     <a href="/" class="logo-text">Winter Postcards</a>
 
-    <a href="mailto:YOUR_EMAIL_HERE" class="contact-icon">
+    <a href="mailto:shivamt.2528@itmuniversity.org" class="contact-icon">
         ❄️
     </a>
 </header>
