--- a/templates/index.html
+++ b/templates/index.html
@@ -30,10 +30,10 @@
 
 <div class="story-quote">
     <p class="quote-text">
-        𝒩𝑜𝓉 𝑒𝓋𝑒𝓇𝓎 𝒻𝑒𝑒𝓁𝒾𝓃𝑔 𝓀𝓃𝑜𝓌𝓈 𝒽𝑜𝓌 𝓉𝑜 𝓈𝓅𝑒𝒶𝓀. 𝒮𝑜𝓂𝑒 𝓈𝑒𝓉𝓉𝓁𝑒 𝓆𝓊𝒾𝑒𝓉𝓁𝓎 𝒾𝓃 𝓉𝒽𝑒 𝒸𝒽𝑒𝓈𝓉, 𝓌𝒶𝒾𝓉𝒾𝓃𝑔 𝒻𝑜𝓇 𝒶 𝓃𝒾𝑔𝒽𝓉 𝓈𝑜𝒻𝓉 𝑒𝓃𝑜𝓊𝑔𝒽 𝓉𝑜 𝓈𝑒𝓉 𝓉𝒽𝑒𝓂 𝒻𝓇𝑒𝑒.
-        𝒲𝒾𝓃𝓉𝑒𝓇 𝒫𝑜𝓈𝓉𝒸𝒶𝓇𝒹𝓈 𝓌𝒶𝓈 𝓂𝒶𝒹𝑒 𝒻𝑜𝓇 𝓉𝒽𝑜𝓈𝑒 𝓆𝓊𝒾𝑒𝓉 𝓉𝒽𝒾𝓃𝑔𝓈 — 𝓉𝒽𝑒 𝒽𝒶𝓁𝒻-𝒻𝑜𝓇𝓂𝑒𝒹 𝓌𝑜𝓇𝒹𝓈, 𝓉𝒽𝑒 𝓊𝓃𝒸𝑒𝓇𝓉𝒶𝒾𝓃 𝓌𝒶𝓇𝓂𝓉𝒽, 𝓉𝒽𝑒 𝓁𝒾𝓉𝓉𝓁𝑒 𝒶𝒸𝒽𝑒 𝓉𝒽𝒶𝓉 𝓉𝓊𝓇𝓃𝓈 𝒾𝓃𝓉𝑜 𝒶 𝓌𝒾𝓈𝒽.
-        𝐼𝓃𝓈𝒾𝒹𝑒 𝑒𝒶𝒸𝒽 𝓈𝓃𝑜𝓌 𝑔𝓁𝑜𝒷𝑒, 𝒶 𝓈𝓉𝒾𝓁𝓁 𝓂𝑜𝓂𝑒𝓃𝓉 𝓌𝒶𝒾𝓉𝓈, 𝒽𝑜𝓁𝒹𝒾𝓃𝑔 𝒶 𝓅𝓁𝒶𝒸𝑒 𝒻𝑜𝓇 𝓉𝒽𝑒 𝓂𝑒𝓈𝓈𝒶𝑔𝑒 𝓎𝑜𝓊’𝓋𝑒 𝒷𝑒𝑒𝓃 𝒸𝒶𝓇𝓇𝓎𝒾𝓃𝑔.
-        𝒲𝓇𝒾𝓉𝑒 𝓌𝒽𝒶𝓉 𝓎𝑜𝓊𝓇 𝒽𝑒𝒶𝓇𝓉 𝒽𝑒𝓈𝒾𝓉𝒶𝓉𝑒𝒹 𝓉𝑜 𝓈𝒶𝓎, 𝓈𝑒𝒶𝓁 𝒾𝓉 𝒾𝓃 𝓌𝒾𝓃𝓉𝑒𝓇 𝑔𝓁𝒶𝓈𝓈, 𝒶𝓃𝒹 𝓁𝑒𝓉 𝒾𝓉 𝒹𝓇𝒾𝒻𝓉 𝒾𝓃𝓉𝑜 𝓉𝒽𝑒 𝓃𝒾𝑔𝒽𝓉 𝓉𝑜𝓌𝒶𝓇𝒹 𝓈𝑜𝓂𝑒𝑜𝓃𝑒 𝓌𝒽𝑜𝓈𝑒 𝓌𝑜𝓇𝓁𝒹 𝓂𝒾𝑔𝒽𝓉 𝒷𝓇𝒾𝑔𝒽𝓉𝑒𝓃 𝒷𝑒𝒸𝒶𝓊𝓈𝑒 𝑜𝒻 𝓎𝑜𝓊.
+       𝖭𝗈𝗍 𝖾𝗏𝖾𝗋𝗒 𝖿𝖾𝖾𝗅𝗂𝗇𝗀 𝗄𝗇𝗈𝗐𝗌 𝗁𝗈𝗐 𝗍𝗈 𝗌𝗉𝖾𝖺𝗄. 𝖲𝗈𝗆𝖾 𝗌𝖾𝗍𝗍𝗅𝖾 𝗊𝗎𝗂𝖾𝗍𝗅𝗒 𝗂𝗇 𝗍𝗁𝖾 𝖼𝗁𝖾𝗌𝗍, 𝗐𝖺𝗂𝗍𝗂𝗇𝗀 𝖿𝗈𝗋 𝖺 𝗇𝗂𝗀𝗁𝗍 𝗌𝗈𝖿𝗍 𝖾𝗇𝗈𝗎𝗀𝗁 𝗍𝗈 𝗌𝖾𝗍 𝗍𝗁𝖾𝗆 𝖿𝗋𝖾𝖾.
+        𝖶𝗂𝗇𝗍𝖾𝗋 𝖯𝗈𝗌𝗍𝖼𝖺𝗋𝖽𝗌 𝗐𝖺𝗌 𝗆𝖺𝖽𝖾 𝖿𝗈𝗋 𝗍𝗁𝗈𝗌𝖾 𝗊𝗎𝗂𝖾𝗍 𝗍𝗁𝗂𝗇𝗀𝗌 — 𝗍𝗁𝖾 𝗁𝖺𝗅𝖿-𝖿𝗈𝗋𝗆𝖾𝖽 𝗐𝗈𝗋𝖽𝗌, 𝗍𝗁𝖾 𝗎𝗇𝖼𝖾𝗋𝗍𝖺𝗂𝗇 𝗐𝖺𝗋𝗆𝗍𝗁, 𝗍𝗁𝖾 𝗅𝗂𝗍𝗍𝗅𝖾 𝖺𝖼𝗁𝖾 𝗍𝗁𝖺𝗍 𝗍𝗎𝗋𝗇𝗌 𝗂𝗇𝗍𝗈 𝖺 𝗐𝗂𝗌𝗁.
+        𝖨𝗇𝗌𝗂𝖽𝖾 𝖾𝖺𝖼𝗁 𝗌𝗇𝗈𝗐 𝗀𝗅𝗈𝖻𝖾, 𝖺 𝗌𝗍𝗂𝗅𝗅 𝗆𝗈𝗆𝖾𝗇𝗍 𝗐𝖺𝗂𝗍𝗌, 𝗁𝗈𝗅𝖽𝗂𝗇𝗀 𝖺 𝗉𝗅𝖺𝖼𝖾 𝖿𝗈𝗋 𝗍𝗁𝖾 𝗆𝖾𝗌𝗌𝖺𝗀𝖾 𝗒𝗈𝗎’𝗏𝖾 𝖻𝖾𝖾𝗇 𝖼𝖺𝗋𝗋𝗒𝗂𝗇𝗀.  𝖶𝗋𝗂𝗍𝖾 𝗐𝗁𝖺𝗍 𝗒𝗈𝗎𝗋 𝗁𝖾𝖺𝗋𝗍 𝗁𝖾𝗌𝗂𝗍𝖺𝗍𝖾𝖽 𝗍𝗈 𝗌𝖺𝗒,
+        𝗌𝖾𝖺𝗅 𝗂𝗍 𝗂𝗇 𝗐𝗂𝗇𝗍𝖾𝗋 𝗀𝗅𝖺𝗌𝗌, 𝖺𝗇𝖽 𝗅𝖾𝗍 𝗂𝗍 𝖽𝗋𝗂𝖿𝗍 𝗂𝗇𝗍𝗈 𝗍𝗁𝖾 𝗇𝗂𝗀𝗁𝗍 𝗍𝗈𝗐𝖺𝗋𝖽 𝗌𝗈𝗆𝖾𝗈𝗇𝖾 𝗐𝗁𝗈𝗌𝖾 𝗐𝗈𝗋𝗅𝖽 𝗆𝗂𝗀𝗁𝗍 𝖻𝗋𝗂𝗀𝗁𝗍𝖾𝗇 𝖻𝖾𝖼𝖺𝗎𝗌𝖾 𝗈𝖿 𝗒𝗈𝗎.
     </p>
     <p class="quote-author">— 𝓼𝓱𝓲𝓿𝓪𝓶</p>
 </div>
@@ -41,3 +41,4 @@
 </body>
 </html>
 <script src="{{ url_for('static', filename='js/snow.js') }}?v=9999"></script>
+
