Fix HTML encoding issues in write.html

--- a/templates/write.html
+++ b/templates/write.html
@@ -95,7 +95,8 @@
         <h1>Your Winter Whisper</h1>
         <p class="sub">Write a whisper only winter will understand.</p>
 
-        <form action="/preview" method="POST">
+        <form action="/preview" method="POST" autocomplete="off">
+
 
             <input type="hidden" name="globe" value="{{ globe }}">
 
